[gd_scene load_steps=10 format=3 uid="uid://bwn04y1ej05ix"]

[ext_resource type="Texture2D" uid="uid://dqo1icdy71sym" path="res://ui/frame.png" id="1_0dyf6"]
[ext_resource type="Texture2D" uid="uid://cmvwxptanu45s" path="res://ui/home_btn.png" id="1_lnbnm"]
[ext_resource type="Script" path="res://ui/main_ui.gd" id="1_unn3c"]
[ext_resource type="Texture2D" uid="uid://be20i76be5fmf" path="res://ui/home_btn_pressed.png" id="2_62ssx"]
[ext_resource type="Texture2D" uid="uid://6erpyxcx65sh" path="res://ui/guide_btn.png" id="3_6rcgr"]
[ext_resource type="FontFile" uid="uid://r2f1jiniy7mi" path="res://font/ArchitectsDaughter.ttf" id="3_cieix"]
[ext_resource type="Texture2D" uid="uid://be14qkwqtoq5p" path="res://ui/guide_btn_pressed.png" id="4_mqr2q"]
[ext_resource type="Texture2D" uid="uid://bnbu5pdnd2y13" path="res://home_png/xbtn.png" id="4_ymxhp"]
[ext_resource type="Texture2D" uid="uid://ngdnv83gpptb" path="res://home_png/xbtn_pressed.png" id="5_aaune"]

[node name="main_ui" type="CanvasLayer"]
script = ExtResource("1_unn3c")

[node name="frame" type="TextureRect" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -388.0
offset_right = 3423.0
offset_bottom = 2693.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_0dyf6")

[node name="text" type="Label" parent="frame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.5
offset_top = -712.5
offset_right = 1031.5
offset_bottom = 719.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_cieix")
theme_override_font_sizes/font_size = 60
autowrap_mode = 2

[node name="x" type="TextureButton" parent="frame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.803
anchor_top = 0.253
anchor_right = 0.803
anchor_bottom = 0.253
offset_left = -62.1392
offset_top = -39.493
offset_right = 29.8608
offset_bottom = 52.507
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ymxhp")
texture_pressed = ExtResource("5_aaune")
stretch_mode = 0

[node name="home" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.979
anchor_top = 0.03
anchor_right = 0.979
anchor_bottom = 0.03
offset_left = -41.808
offset_top = 6.56
offset_right = 128.192
offset_bottom = 198.56
grow_horizontal = 0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("1_lnbnm")
texture_pressed = ExtResource("2_62ssx")

[node name="guide" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.979
anchor_top = 0.042
anchor_right = 0.979
anchor_bottom = 0.042
offset_left = -48.808
offset_top = 49.784
offset_right = 161.192
offset_bottom = 320.784
grow_horizontal = 0
scale = Vector2(0.23, 0.23)
texture_normal = ExtResource("3_6rcgr")
texture_pressed = ExtResource("4_mqr2q")

[connection signal="pressed" from="frame/x" to="." method="_on_x_pressed"]
[connection signal="pressed" from="home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="guide" to="." method="_on_guide_pressed"]
